[package]
name = "payjoin-ffi-test-utils"
version = "0.24.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
csharp = ["dep:uniffi-bindgen-cs"]
dart = ["dep:uniffi-dart"]

[lib]
name = "payjoin_ffi_test_utils"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen-test-utils"
path = "uniffi-bindgen.rs"

[dependencies]
lazy_static = "1.5.0"
payjoin-ffi = { path = "../payjoin-ffi" }
payjoin-test-utils = { version = "0.0.1" }
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
uniffi = { version = "0.30.0", features = ["cli"] }
uniffi-bindgen-cs = { git = "https://github.com/chavic/uniffi-bindgen-cs.git", rev = "878a3d269eacce64beadcd336ade0b7c8da09824", optional = true }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart.git", tag = "v0.1.0+v0.30.0", optional = true }
